@@ -11,6 +11,8 @@ Added the uncheck option for report categories.
 
 Fixed the link to published reports from InfoBook.
 
+Added forename as a guardian search option.
+
 
 Version ClaSS-0.9.40 release (2011/05/31)
 -----------------------------------------
